// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordResetRequest comprehensive snapshots > full password reset request - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "2.1.0",
    "deviceId": "device-full-789",
    "geo": {
      "lat": 52.52,
      "lng": 13.405,
    },
    "ip": "10.0.0.1",
    "locale": "ru-RU",
    "sessionId": "session-full-xyz",
    "timezone": "Europe/Moscow",
    "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 17_0 like Mac OS X)",
  },
  "dtoVersion": "1.1",
  "identifier": {
    "type": "email",
    "value": "full@example.com",
  },
  "redirectUrl": "https://example.com/reset-full",
}
`;

exports[`PasswordResetRequest comprehensive snapshots > minimal password reset request - полный snapshot 1`] = `
{
  "identifier": {
    "type": "email",
    "value": "user@example.com",
  },
}
`;

exports[`PasswordResetRequest comprehensive snapshots > password reset request with email - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "dtoVersion": "1.0",
  "identifier": {
    "type": "email",
    "value": "user@example.com",
  },
  "redirectUrl": "https://example.com/reset",
}
`;

exports[`PasswordResetRequest comprehensive snapshots > password reset request with phone - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "dtoVersion": "1.0",
  "identifier": {
    "type": "phone",
    "value": "+1234567890",
  },
  "redirectUrl": "https://example.com/reset",
}
`;

exports[`PasswordResetRequest comprehensive snapshots > password reset request with username - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "dtoVersion": "1.0",
  "identifier": {
    "type": "username",
    "value": "username123",
  },
  "redirectUrl": "https://example.com/reset",
}
`;
